# korrector

./: .gitignore  README.md  pyproject.toml
korrector/: __init__.py  cli.py  komga_orm.py  korrector.py  krakoa.py  main.py  orm.py
tests/: test_constants.py  test_data.py  test_db.py  test_korrector.py  test_krakoa.py
tests/test_assets/: KorrectedComicInfo.xml  KorrectedComicInfoTest.cbz  NoComicInfoTest.cbz  NoDateTest.cbz  NoTitleTest.cbz  OldComicInfo.xml  test.cbz
