[project]
name = "korrector"
version = "0.1.0"
description = ""
authors = [
    {name = "Matt Pickle",email = "matthew.e.pickle@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "poetry-core (>=2.0.0,<3.0.0)",
    "pytest (==8.4.1)",
    "lxml (>=6.0.0,<7.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
korrector = "korrector.cli:main"

[tool.poetry.group.dev.dependencies]
ruff = ">=0.12.5"
colorlog = "^6.8.2"
[tool.ruff.per-file-ignores]
"tests/**" = ["D", "S101", "ARG001", "PT017"]
"korrector/cli.py" = ["D"]
