[project]
name = "korrector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "lxml>=6.0.0",
    "sqlalchemy>=2.0.42",
]

[project.scripts]
korrector = "korrector.cli:main"

[dependency-groups]
dev = [
    "colorlog>=6.9.0",
    "pytest>=8.4.1",
    "ruff>=0.12.7",
]

[tool.ruff.per-file-ignores]
"tests/**" = ["D", "S101", "ARG001", "PT017"]
"korrector/cli.py" = ["D"]

[tool.setuptools.packages.find]
exclude = ["temp"]